# cudakernels

./: build.bat  readme.md  run_profile.bat  run_profilehelper.bat
base/: CMakeLists.txt
base/include/: Buffer.h  DeviceBuffer.h  common.h  kernels.h  tests.h
base/src/: BufferHelper.cpp  add.cpp  addkernel.cu  buffers.cpp  colorconversion.cpp  effectsKernel.cu  main.cpp  overlay.cu  profile.cpp
